added soa controller
